SFDCInvoice/Project_Expenses/src/objects/Expance__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <formula>TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>remaining_money__c</fullName>
        <label>remaining money</label>
        <summarizedField>Expan__c.money_contributed__c</summarizedField>
        <summaryForeignKey>Expan__c.Expense__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Expense</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>amount_must_not_exceed</fullName>
        <active>true</active>
        <errorConditionFormula>Amount__c  &lt;=  remaining_money__c</errorConditionFormula>
        <errorMessage>amount must not exceed from estimated amount</errorMessage>
    </validationRules>
</CustomObject>